--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,8 +26,8 @@
       <div class="col s6">
         <form action="" method="">
           <div class="input-field col s12">
-            <input id="respawn" class="validate" type="text" name="name" value="" />
-            <label for="respawn">Respawn text</label>
+            <input id="respawn" class="" type="text" name="name" value="" required />
+            <label id="respawn-label" for="respawn" data-error="wrong" data-success="">Respawn text</label>
           </div>
           <button id="btn" class="btn waves-effect waves-light blue-grey darken-4" type="button" name="action">
             Clica!
